# Embedded_logging

./: .gitignore  .gitmodules  CMakeLists.txt  RunAllTests.bat
src/apps/: main.c
src/libs/: CMakeLists.txt
src/libs/src/assertion/: assertion.cpp  assertion.h
src/libs/src/logging/: logging.h
src/libs/tests/: CMakeLists.txt
src/libs/tests/assertion/: CMakeLists.txt  assertion.cpp  main.cpp
src/libs/tests/assertion-disabled/: CMakeLists.txt  assertion_disabled.cpp
src/libs/tests/mockup/: AssertionMock.h
src/tests/: CMakeLists.txt  DeviceAllTest.cpp  HostAllTest.cpp  syscalls.c
src/tests/SuiteTestFramework/: CMakeLists.txt  Dummy.cpp
